a little more blueprint-ing

--- a/html4.html
+++ b/html4.html
@@ -1,1 +1,50 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
+<html>
+<head>
+	<title>My Website</title>
+</head>
+<body>
+	<div class="header">
+		<h1>My Website</h1>
+	</div>
+	<div class="navbar">
+		<h2>HOME</h2>
+		<h2>ALL POSTS</h2>
+		<h2>ABOUT US</h2>
+	</div>
+	
+	<h2>Article Title</h2>
+	<p class="main_content"></p>
+	<p class="main_content"></p>
+
+	<h3>Section Title</h3>
+	<p class="main_content"></p>
+	<table class="tech_table">
+		<tr>
+			<th>What</th>
+			<th>Where</th>
+			<th>How</th>
+		</tr>
+		<tr>
+			<td>HTML</td>
+			<td>Lorem</td>
+			<td><button>Go!</button></td>
+		</tr>
+		<tr>
+			<td>CSS</td>
+			<td>Lorem</td>
+			<td><button>Try!</button></td>
+		</tr>
+		<tr>
+			<td>JS</td>
+			<td>Lorem</td>
+			<td><button>View!</button></td>
+		</tr>
+	</table>
+	<p class="main_content"></p>
+
+	<h3>Section Title</h3>
+	
+
+</body>
+</html>
