writing html, editing classes

--- a/html4.html
+++ b/html4.html
@@ -1,24 +1,27 @@
-<<!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+	<meta charset="utf-8">
 	<title>My Website</title>
+	<link rel="stylesheet" href="normalize.css">
+	<link rel="stylesheet" href="main.css">
 </head>
 <body>
-	<div class="header">
-		<h1>My Website</h1>
+	<div class="header-coloring">
+		<h1 class="header-txt">My Website</h1>
 	</div>
 	<div class="navbar">
-		<h2>HOME</h2>
-		<h2>ALL POSTS</h2>
-		<h2>ABOUT US</h2>
+		<a href="#" class="navbar-link">HOME</a>
+		<a href="#" class="navbar-link">ALL POSTS</a>
+		<a href="#" class="navbar-link">ABOUT US</a>
 	</div>
 	
-	<h2>Article Title</h2>
-	<p class="main_content"></p>
-	<p class="main_content"></p>
+	<h2 class="article-header">Article Title</h2>
+	<p class="main_content">"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+	<p class="main_content">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?</p>
 
-	<h3>Section Title</h3>
-	<p class="main_content"></p>
+	<hs class="section-header">Section Title</h3>
+	<p class="main_content">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
 	<table class="tech_table">
 		<tr>
 			<th>What</th>
@@ -27,24 +30,46 @@
 		</tr>
 		<tr>
 			<td>HTML</td>
-			<td>Lorem</td>
+			<td>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. </td>
 			<td><button>Go!</button></td>
 		</tr>
 		<tr>
 			<td>CSS</td>
-			<td>Lorem</td>
+			<td>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.</td>
 			<td><button>Try!</button></td>
 		</tr>
 		<tr>
 			<td>JS</td>
-			<td>Lorem</td>
+			<td>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</td>
 			<td><button>View!</button></td>
 		</tr>
 	</table>
-	<p class="main_content"></p>
+	<p class="main_content">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p>
 
-	<h3>Section Title</h3>
-	
+	<hs class="section-header">Section Title</h3>
+	<p class="main_content">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. </p>
+	<div class="code_snippet"></div>
+	<p class="main_content">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.</p>
+	<p class="main_content">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p>
+
+	<hs class="section-header">Section Title</h3>
+	<p class="main_content">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p>
+	<div class="image-container"><img src=""></div>
+	<ol>
+		<li><strong>Create HTML</strong>:Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</li>
+		<li><strong>Make Pretty with CSS</strong>:Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</li>
+		<li><strong>Profit</strong>:Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</li>
+
+	<p class="byline">Posted by <a>Author</a> under <a>Web</a> > <a>Dev</a> on <strong>January 13, 2014</strong>.</p>
+
+	<h2>Comments</h2>
+	<!-- user info -->
+	<!-- email, display name, website input -->
+	<!-- comment -->
+	<textarea></textarea>
+	<button class="submit-comment"></button>
+	<!-- comments -->
+
 
 </body>
 </html>
