--- a/html4.html
+++ b/html4.html
@@ -11,18 +11,18 @@
 		<h1 class="header-txt">My Website</h1>
 	</div>
 	<div class="navbar">
-		<a href="#" class="navbar-link">HOME</a>
-		<a href="#" class="navbar-link">ALL POSTS</a>
-		<a href="#" class="navbar-link">ABOUT US</a>
+		<a href="#" class="navbar-link basic-anchor">HOME</a>
+		<a href="#" class="navbar-link basic-anchor">ALL POSTS</a>
+		<a href="#" class="navbar-link basic-anchor">ABOUT US</a>
 	</div>
 	
-	<h2 class="article-header">Article Title</h2>
-	<p class="main_content">"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-	<p class="main_content">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?</p>
+	<h2 class="section-header article-header">Article Title</h2>
+	<p class="main-content">"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo..</p>
+	<p class="main-content">Neque porro quisquam est, <strong>qui dolorem ipsum</strong> quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi <a href="#" class="text-link basic-anchor">tempora incidunt</a> ut labore et dolore magnam aliquam quaerat voluptatem.</p>
 
-	<hs class="section-header">Section Title</h3>
-	<p class="main_content">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
-	<table class="tech_table">
+	<h3 class="section-header">Section Title</h3>
+	<p class="main-content">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
+	<table class="tech-table">
 		<tr>
 			<th>What</th>
 			<th>Where</th>
@@ -44,16 +44,16 @@
 			<td><button>View!</button></td>
 		</tr>
 	</table>
-	<p class="main_content">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p>
+	<p class="main-content">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p>
 
 	<hs class="section-header">Section Title</h3>
-	<p class="main_content">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. </p>
+	<p class="main-content">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. </p>
 	<div class="code_snippet"></div>
-	<p class="main_content">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.</p>
-	<p class="main_content">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p>
+	<p class="main-content">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.</p>
+	<p class="main-content">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p>
 
 	<hs class="section-header">Section Title</h3>
-	<p class="main_content">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p>
+	<p class="main-content">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p>
 	<div class="image-container"><img src=""></div>
 	<ol>
 		<li><strong>Create HTML</strong>:Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</li>
