--- a/html4.html
+++ b/html4.html
@@ -16,13 +16,15 @@
 		<a href="#" class="navbar-link basic-anchor">ABOUT US</a>
 	</div>
 	
-	<h2 class="section-header article-header">Article Title</h2>
-	<p class="main-content">"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo..</p>
-	<p class="main-content">Neque porro quisquam est, <strong>qui dolorem ipsum</strong> quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi <a href="#" class="text-link basic-anchor">tempora incidunt</a> ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+	<h2 class="section-header full">Article Title</h2>
+	<p class="main-content skinny">"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo..</p>
+	<p class="main-content skinny">Neque porro quisquam est, <strong>qui dolorem ipsum</strong> quia dolor sit amet, <a href="#" class="text-link basic-anchor">consectetur</a>, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et <em>dolore magnam aliquam quaerat</em> voluptatem.</p>
 
-	<h3 class="section-header">Section Title</h3>
-	<p class="main-content">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
-	<table class="tech-table">
+	<h3 class="section-header full">Section Title</h3>
+	<p class="main-content skinny">Neque porro quisquam est, <strong>qui dolorem ipsum</strong> quia dolor sit amet, <a href="#" class="text-link basic-anchor">consectetur</a>, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et <em>dolore magnam aliquam quaerat</em> voluptatem.</p>
+	<p class="main-content skinny">Neque porro quisquam est, <strong>qui dolorem ipsum</strong> quia dolor sit amet, <a href="#" class="text-link basic-anchor">consectetur</a>, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et <em>dolore magnam aliquam quaerat</em> voluptatem.</p>
+	<p class="main-content skinny">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
+	<table class="tech-table full">
 		<tr>
 			<th>What</th>
 			<th>Where</th>
@@ -31,43 +33,48 @@
 		<tr>
 			<td>HTML</td>
 			<td>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. </td>
-			<td><button>Go!</button></td>
+			<td><button class="button-basic">Go!</button></td>
 		</tr>
 		<tr>
 			<td>CSS</td>
 			<td>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.</td>
-			<td><button>Try!</button></td>
+			<td><button class="button-basic">Try!</button></td>
 		</tr>
 		<tr>
 			<td>JS</td>
 			<td>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</td>
-			<td><button>View!</button></td>
+			<td><button class="button-basic">View!</button></td>
 		</tr>
 	</table>
-	<p class="main-content">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p>
+	<p class="main-content skinny">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p>
 
-	<hs class="section-header">Section Title</h3>
-	<p class="main-content">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. </p>
+	<h3 class="section-header full">Section Title</h3>
+	<p class="main-content skinny">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. </p>
 	<div class="code_snippet"></div>
-	<p class="main-content">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.</p>
-	<p class="main-content">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p>
+	<p class="main-content skinny">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.</p>
+	<p class="main-content skinny">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p>
 
-	<hs class="section-header">Section Title</h3>
-	<p class="main-content">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p>
-	<div class="image-container"><img src=""></div>
-	<ol>
-		<li><strong>Create HTML</strong>:Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</li>
-		<li><strong>Make Pretty with CSS</strong>:Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</li>
-		<li><strong>Profit</strong>:Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</li>
+	<h3 class="section-header full">Section Title</h3>
+	<p class="main-content skinny">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p>
+	<div class="image-container full"><img src="http://placehold.it/600x150"></div>
+	<ol class="ol-basic full">
+		<li><strong>Create HTML</strong>: Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</li>
+		<li><strong>Make Pretty with CSS</strong>: Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</li>
+		<li><strong>Profit</strong>: Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</li>
+	</ol>
 
-	<p class="byline">Posted by <a>Author</a> under <a>Web</a> > <a>Dev</a> on <strong>January 13, 2014</strong>.</p>
+	<p class="byline full">Posted by <a>Author</a> under <a>Web</a> > <a>Dev</a> on <strong>January 13, 2014</strong>.</p>
 
-	<h2>Comments</h2>
-	<!-- user info -->
+	<h2 class="article-header section-header full">Comments</h2>
+	<div class="full">
+		<div class="strikethrough-line1"></div>
+		<div class="strikethrough-txt">USER INFO</div>
+		<div class="strikethrough-line2"></div>
+	</div>
 	<!-- email, display name, website input -->
 	<!-- comment -->
-	<textarea></textarea>
-	<button class="submit-comment"></button>
+	<textarea class="formatted-textarea full"></textarea>
+	<button class="comment-submit full">SUBMIT</button>
 	<!-- comments -->
 
 
