still trying, still failing

--- a/html4.html
+++ b/html4.html
@@ -72,10 +72,10 @@
 	<p class="byline full">Posted by <a>Author</a> under <a>Web</a> > <a>Dev</a> on <strong>January 13, 2014</strong>.</p>
 
 	<h2 class="article-header section-header full">Comments</h2>
-	<div class="full">
+	<div class="full" style="line-height:0">
 		<div class="strikethrough-line1"></div>
 		<div class="strikethrough-txt">USER INFO</div>
-		<div class="strikethrough-line2"></div>
+		<!-- <div class="strikethrough-line2"></div> -->
 	</div>
 	<form class="full">
           <div class="entry_field">
@@ -91,38 +91,37 @@
             <input type="text" name="Website" class="input_field">
           </div>
     </form>
-    <div class="full">
+    <div class="full" style="line-height:0">
     	COMMENT
     </div>
 	<textarea class="formatted-textarea full"></textarea>
 	<button class="comment-submit full">SUBMIT</button>
 		
 	<div class="full">
-		<div>
-			<img src="http://placehold.it/50x50">
+		<img class="avatar" src="http://placehold.it/50x50">
+		<div class="user-info">
 			<h3>User 1</h3><span class="byline"><em>January 13, 2014</em></span>
-			<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p>
+		</div>
+		<div><p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p></div>
 	</div>
-	<div class="sub-comment full">
-		<div>
-			<img src="http://placehold.it/50x50">
+	<div class="sub-comment">
+		<img class="avatar" src="http://placehold.it/50x50">
+		<div class="user-info">
 			<h3>User 2</h3><span class="byline"><em>January 13, 2014</em></span>
-			<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p>
 		</div>
-	</div>
-	<div class="sub-comment full">
-		<div>
-			<img src="http://placehold.it/50x50">
+		<div><p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p></div>
+		<img class="avatar" src="http://placehold.it/50x50">
+		<div class="user-info">
 			<h3>User 1</h3><span class="byline"><em>January 13, 2014</em></span>
-			<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p>
 		</div>
+		<div><p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p></div>
 	</div>
 	<div class="full">
-		<div>
-			<img src="http://placehold.it/50x50">
+		<img class="avatar" src="http://placehold.it/50x50">
+		<div class="user-info">
 			<h3>User 3</h3><span class="byline"><em>January 13, 2014</em></span>
-			<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p>
 		</div>
+		<div><p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p></div>
 	</div>
 </body>
 </html>
