final draft ready

--- a/html4.html
+++ b/html4.html
@@ -73,9 +73,8 @@
 
 	<h2 class="article-header section-header full">Comments</h2>
 	<div class="full" style="line-height:0">
-		<div class="strikethrough-line1"></div>
+		<div class="strikethrough-line"></div>
 		<div class="strikethrough-txt">USER INFO</div>
-		<!-- <div class="strikethrough-line2"></div> -->
 	</div>
 	<form class="full">
           <div class="entry_field">
@@ -92,7 +91,8 @@
           </div>
     </form>
     <div class="full" style="line-height:0">
-    	COMMENT
+		<div class="strikethrough-line"></div>
+		<div class="strikethrough-txt">COMMENT</div>
     </div>
 	<textarea class="formatted-textarea full"></textarea>
 	<button class="comment-submit full">SUBMIT</button>
